# Gemmini-accelerator-driver-and-runtime

./: README
driver/: Makefile  Makefile.in  configure  configure.ac
driver/src/: gemmini_driver.cpp  gemmini_driver.h
runtime/: Makefile  Makefile.in  configure  configure.ac
runtime/src/: baseline.cpp  gemmini_baseline.h  gemmini_runtime.cpp  gemmini_runtime.h
